--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -565,8 +565,134 @@ Enters into a container. This option is a back-door for host root only.
 Prints help message with a brief list of possible options.
 .IP \fB--version\fR 4
 Prints \fBvzctl\fR version.
-.SH DIAGNOSTICS
-Returns 0 upon success.
+.SH EXIT STATUS
+Returns 0 upon success, or an appropriate error code in case of an error:
+.IP 1
+Failed to set a UBC parameter
+.IP 2
+Failed to set a fair scheduler parameter
+.IP 3
+Generic system error
+.IP 5
+The running kernel is not an OpenVZ kernel (or some OpenVZ modules are not loaded)
+.IP 6
+Not enough system resources
+.IP 7
+\fBENV_CREATE\fR ioctl failed
+.IP 8
+Command executed by \fBvzctl exec\fR returned non-zero exit code
+.IP 9
+Container is locked by another \fBvzctl\fR invocation
+.IP 10
+Global OpenVZ configuration file \fBvz.conf\fR(5) not found
+.IP 11
+A vzctl helper script file not found
+.IP 12
+Permission denied
+.IP 13
+Capability setting failed
+.IP 14
+Container configuration file \fBvps.conf\fR(5) not found
+.IP 15
+Timeout on \fBvzctl exec\fR
+.IP 16
+Error during \fBvzctl chkpnt\fR
+.IP 17
+Error during \fBvzctl restore\fR
+.IP 18
+Error from \fBsetluid()\fR syscall
+.IP 20
+Invalid command line parameter
+.IP 21
+Invalid value for command line parameter
+.IP 22
+Container root directory (\fBVE_ROOT\fR) not set
+.IP 23
+Container private directory (\fBVE_PRIVATE\fR) not set
+.IP 24
+Container template directory (\fBTEMPLATE\fR) not set
+.IP 28
+Not all required UBC parameters are set, unable to start container
+.IP 29
+OS template is not specified, unable to create container
+.IP 31
+Container not running
+.IP 32
+Container already running
+.IP 33
+Unable to stop container
+.IP 34
+Unable to add IP address to container
+.IP 40
+Container not mounted
+.IP 41
+Container already mounted
+.IP 43
+Container private area not found
+.IP 44
+Container private area already exists
+.IP 46
+Not enough disk space
+.IP 47
+Bad/broken container (\fB/sbin/init\fR or \fB/bin/sh\fR not found)
+.IP 48
+Unable to create a new container private area
+.IP 49
+Unable to create a new container root area
+.IP 50
+Unable to mount container
+.IP 51
+Unable to unmount container
+.IP 52
+Unable to delete a container
+.IP 53
+Container private area not exist
+.IP 61
+\fBvzquota init\fR failed
+.IP 62
+\fBvzquota on\fB or \fBvzquota setlimit\fR failed
+.IP 63
+Parameter \fBDISKSPACE\fR not set
+.IP 64
+Parameter \fBDISKINODES\fR not set
+.IP 66
+\fBvzquota off\fR failed
+.IP 67
+ugid quota not initialized
+.IP 71
+Incorrect IP address format
+.IP 74
+Error changing password
+.IP 78
+IP address already in use
+.IP 79
+Container action script returned an error
+.IP 82
+Config file copying error
+.IP 89
+IP address not available
+.IP 91
+OS template not found
+.IP 100
+Unable to find container IP address
+.IP 104
+\fBVE_NETDEV\fR ioctl error
+.IP 105
+Container start disabled
+.IP 106
+Unable to set iptables on a running container
+.IP 107
+Distribution-specific configuration file not found
+.IP 109
+Unable to apply a config
+.IP 129
+Unable to set meminfo parameter
+.IP 130
+Error setting veth interface
+.IP 131
+Error setting container name
+.IP 133
+Waiting for container start failed
 .SH EXAMPLES
 To create and start "basic" container with ID of 1000 using
 \fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
